# orca-data-extraction

./: .readthedocs.yaml  README.md  requirements.txt
orca_data_extraction/: requirements.txt  setup.cfg  setup.py
orca_data_extraction/data/: ORCA_data_PPh3_test_input.csv  ORCA_data_PPh3_test_input.json  ORCA_data_PPh3_test_input.xls
orca_data_extraction/data/other/: H2O_input.json  H2O_opt.out
orca_data_extraction/docs/: conf.py  index.rst  src.rst
orca_data_extraction/docs/_build/doctrees/: environment.pickle  index.doctree  modules.doctree  src.doctree
orca_data_extraction/docs/_build/html/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  src.html
orca_data_extraction/docs/_build/html/_modules/: index.html
orca_data_extraction/docs/_build/html/_modules/src/: bond_angles.html  bond_lengths.html  data_section.html  data_section_with_inputs.html  dipole_moments.html  final_geom.html  homo_lumo_energies.html  initial_geom.html  input_reader.html  (+10 more)
orca_data_extraction/src/: bond_angles.py  bond_lengths.py  data_section.py  data_section_with_inputs.py  dipole_moments.py  final_geom.py  homo_lumo_energies.py  initial_geom.py  input_reader.py  input_reader_json.py  input_reader_txt.py  loewdin_charge_sums.py  loewdin_charges.py  mulliken_charge_sums.py  mulliken_charges.py  orca_out_to_csv.py  orca_out_to_excel.py  orca_out_to_json.py  polarizability.py  structure_data.py  structure_data_builder.py
orca_data_extraction/tests/: PPh3_test_input.json  PPh3_test_input_skip.json  test_structure_data.py
(+32 files in other folders)
