[metadata]
name = sch_out_to_excel
version = 0.1.0
author = Peter Waddell
author_email = pmwaddell9@gmail.com
description = A script which compiles a desired set of data from Schrödinger.out files and exports the results into an excel spreadsheet.
long_description = file: README.md
long_description_content_type = text/markdown
license = Proprietary and confidential
license_file = LICENSE.txt
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.9
install_requires =
    xlwt >= 1.3.0
